--- a/notebooks/airquality/3_air_quality_training_pipeline.ipynb
+++ b/notebooks/airquality/3_air_quality_training_pipeline.ipynb
@@ -209,7 +209,7 @@
    ],
    "source": [
     "# Select features for training data.\n",
-    "selected_features = air_quality_fg.select(['pm25', 'date']).join(weather_fg.select_features(), on=['city'])"
+    "#selected_features = air_quality_fg.select(['pm25', 'date']).join(weather_fg.select_features(), on=['city'])"
    ]
   },
   {
@@ -254,13 +254,13 @@
     }
    ],
    "source": [
-    "feature_view = fs.get_or_create_feature_view(\n",
-    "    name='air_quality_fv',\n",
-    "    description=\"weather features with air quality as the target\",\n",
-    "    version=1,\n",
-    "    labels=['pm25'],\n",
-    "    query=selected_features,\n",
-    ")"
+    "#feature_view = fs.get_or_create_feature_view(\n",
+    "    #name='air_quality_fv',\n",
+    "    #description=\"weather features with air quality as the target\",\n",
+    "    #version=1,\n",
+    "    #labels=['pm25'],\n",
+    "    #query=selected_features,\n",
+    "#)"
    ]
   },
   {
