--- a/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
+++ b/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d491b0a0",
    "metadata": {},
    "outputs": [
@@ -702,8 +702,110 @@
       "Job started successfully, you can follow the progress at \n",
       "https://c.app.hopsworks.ai:443/p/1286325/jobs/named/weather_1_offline_fg_materialization/executions\n",
       "2025-11-13 18:41:51,550 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
-      "2025-11-13 18:41:54,822 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n"
+      "2025-11-13 18:41:54,822 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-11-13 18:43:57,759 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
+      "2025-11-13 18:43:57,939 INFO: Waiting for log aggregation to finish.\n",
+      "2025-11-13 18:44:06,711 INFO: Execution finished successfully.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Job('weather_1_offline_fg_materialization', 'SPARK'),\n",
+       " {\n",
+       "   \"success\": true,\n",
+       "   \"results\": [\n",
+       "     {\n",
+       "       \"success\": true,\n",
+       "       \"expectation_config\": {\n",
+       "         \"expectation_type\": \"expect_column_min_to_be_between\",\n",
+       "         \"kwargs\": {\n",
+       "           \"column\": \"precipitation_sum\",\n",
+       "           \"min_value\": -0.1,\n",
+       "           \"max_value\": 1000.0,\n",
+       "           \"strict_min\": true\n",
+       "         },\n",
+       "         \"meta\": {\n",
+       "           \"expectationId\": 739469\n",
+       "         }\n",
+       "       },\n",
+       "       \"result\": {\n",
+       "         \"observed_value\": 0.0,\n",
+       "         \"element_count\": 7,\n",
+       "         \"missing_count\": null,\n",
+       "         \"missing_percent\": null\n",
+       "       },\n",
+       "       \"meta\": {\n",
+       "         \"ingestionResult\": \"INGESTED\",\n",
+       "         \"validationTime\": \"2025-11-13T05:41:32.000557Z\"\n",
+       "       },\n",
+       "       \"exception_info\": {\n",
+       "         \"raised_exception\": false,\n",
+       "         \"exception_message\": null,\n",
+       "         \"exception_traceback\": null\n",
+       "       }\n",
+       "     },\n",
+       "     {\n",
+       "       \"success\": true,\n",
+       "       \"expectation_config\": {\n",
+       "         \"expectation_type\": \"expect_column_min_to_be_between\",\n",
+       "         \"kwargs\": {\n",
+       "           \"column\": \"wind_speed_10m_max\",\n",
+       "           \"min_value\": -0.1,\n",
+       "           \"max_value\": 1000.0,\n",
+       "           \"strict_min\": true\n",
+       "         },\n",
+       "         \"meta\": {\n",
+       "           \"expectationId\": 739468\n",
+       "         }\n",
+       "       },\n",
+       "       \"result\": {\n",
+       "         \"observed_value\": 7.4215898513793945,\n",
+       "         \"element_count\": 7,\n",
+       "         \"missing_count\": null,\n",
+       "         \"missing_percent\": null\n",
+       "       },\n",
+       "       \"meta\": {\n",
+       "         \"ingestionResult\": \"INGESTED\",\n",
+       "         \"validationTime\": \"2025-11-13T05:41:32.000557Z\"\n",
+       "       },\n",
+       "       \"exception_info\": {\n",
+       "         \"raised_exception\": false,\n",
+       "         \"exception_message\": null,\n",
+       "         \"exception_traceback\": null\n",
+       "       }\n",
+       "     }\n",
+       "   ],\n",
+       "   \"evaluation_parameters\": {},\n",
+       "   \"statistics\": {\n",
+       "     \"evaluated_expectations\": 2,\n",
+       "     \"successful_expectations\": 2,\n",
+       "     \"unsuccessful_expectations\": 0,\n",
+       "     \"success_percent\": 100.0\n",
+       "   },\n",
+       "   \"meta\": {\n",
+       "     \"great_expectations_version\": \"0.18.12\",\n",
+       "     \"expectation_suite_name\": \"weather_expectation_suite\",\n",
+       "     \"run_id\": {\n",
+       "       \"run_name\": null,\n",
+       "       \"run_time\": \"2025-11-13T18:41:32.557991+01:00\"\n",
+       "     },\n",
+       "     \"batch_kwargs\": {\n",
+       "       \"ge_batch_id\": \"fe3ec074-c0b7-11f0-9301-4e3fb3dc4bd9\"\n",
+       "     },\n",
+       "     \"batch_markers\": {},\n",
+       "     \"batch_parameters\": {},\n",
+       "     \"validation_time\": \"20251113T174132.557690Z\",\n",
+       "     \"expectation_suite_meta\": {\n",
+       "       \"great_expectations_version\": \"0.18.12\"\n",
+       "     }\n",
+       "   }\n",
+       " })"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
