--- a/notebooks/airquality/4_air_quality_batch_inference.ipynb
+++ b/notebooks/airquality/4_air_quality_batch_inference.ipynb
@@ -670,6 +670,11 @@
     }
    ],
    "source": [
+    "air_quality_fg = fs.get_feature_group(\n",
+    "    name='air_quality_lag',\n",
+    "    version=1,\n",
+    ")\n",
+    "\n",
     "feature_order = [\n",
     "    \"pm25_lag1\",\n",
     "    \"pm25_lag2\",\n",
