--- a/notebooks/airquality/4_air_quality_batch_inference.ipynb
+++ b/notebooks/airquality/4_air_quality_batch_inference.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "bcb904bb-a8c4-45d7-b54e-6d24f689c700",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "1f430c88",
    "metadata": {},
    "outputs": [],
@@ -95,22 +95,23 @@
     "from xgboost import XGBRegressor\n",
     "import hopsworks\n",
     "import json\n",
-    "from mlfs.airquality import util"
+    "from mlfs.airquality import util\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "bcfd27c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2025, 11, 13, 16, 53, 44, 824454)"
+       "datetime.datetime(2025, 11, 13, 19, 19, 25, 165389)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "74a2c243",
    "metadata": {},
    "outputs": [
@@ -139,11 +140,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-13 16:53:49,910 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-11-13 19:19:26,976 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-11-13 16:53:49,918 INFO: Initializing external client\n",
-      "2025-11-13 16:53:49,919 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-11-13 16:53:50,493 WARNING: UserWarning: The installed hopsworks client version 4.4.2 may not be compatible with the connected Hopsworks backend version 4.2.2. \n",
+      "2025-11-13 19:19:26,980 INFO: Initializing external client\n",
+      "2025-11-13 19:19:26,981 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-11-13 19:19:27,685 WARNING: UserWarning: The installed hopsworks client version 4.4.2 may not be compatible with the connected Hopsworks backend version 4.2.2. \n",
       "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n",
       "\n"
      ]
@@ -160,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-13 16:53:51,253 INFO: Python Engine initialized.\n",
+      "2025-11-13 19:19:28,690 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1286325\n"
      ]
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "c6d70a2f",
    "metadata": {},
    "outputs": [
@@ -196,13 +197,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-11-13 16:54:24,922 INFO: Initializing for batch retrieval of feature vectors\n"
+      "2025-11-13 19:19:40,631 INFO: Initializing for batch retrieval of feature vectors\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c964e999c6464156adab45ea736b4f11",
+       "model_id": "89f35499d4514e239909bb321b8b398b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fefc8542a214f9792024e8000ae9753",
+       "model_id": "9a920e0e8be949808065951f23d25800",
        "version_major": 2,
        "version_minor": 0
       },
@@ -244,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b680acc51654a56bc81fa8141f400d1",
+       "model_id": "b7168c4d89fe48bcba2918695ee51e83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "a6cf6c06",
    "metadata": {},
    "outputs": [
@@ -328,7 +329,7 @@
        "             num_parallel_tree=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "aaacae3c",
    "metadata": {},
    "outputs": [
@@ -363,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.75s) \n"
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.77s) \n"
      ]
     },
     {
@@ -472,7 +473,7 @@
        "5           11.090103                   283.134033  norrkoping  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "7bfe4ca7-2294-49aa-ac7d-2cb4a56b8e7a",
    "metadata": {},
    "outputs": [
@@ -504,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.03s) \n"
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.16s) \n"
      ]
     },
     {
@@ -535,27 +536,9 @@
        "      <th>wind_direction_10m_dominant</th>\n",
        "      <th>city</th>\n",
        "      <th>predicted_pm25</th>\n",
-       "      <th>street</th>\n",
-       "      <th>country</th>\n",
-       "      <th>days_before_forecast_day</th>\n",
-       "      <th>(predicted_pm25, pm25_lag1)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2025-11-14 00:00:00+00:00</td>\n",
-       "      <td>4.55</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.090103</td>\n",
-       "      <td>283.134033</td>\n",
-       "      <td>norrkoping</td>\n",
-       "      <td>30.099804</td>\n",
-       "      <td>tradgardsgatan-21</td>\n",
-       "      <td>sweden</td>\n",
-       "      <td>6</td>\n",
-       "      <td>14.730573</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025-11-15 00:00:00+00:00</td>\n",
@@ -564,39 +547,7 @@
        "      <td>12.181625</td>\n",
        "      <td>251.029495</td>\n",
        "      <td>norrkoping</td>\n",
-       "      <td>21.784365</td>\n",
-       "      <td>tradgardsgatan-21</td>\n",
-       "      <td>sweden</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20.412798</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-11-16 00:00:00+00:00</td>\n",
-       "      <td>4.95</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.904882</td>\n",
-       "      <td>247.011261</td>\n",
-       "      <td>norrkoping</td>\n",
-       "      <td>31.040571</td>\n",
-       "      <td>tradgardsgatan-21</td>\n",
-       "      <td>sweden</td>\n",
-       "      <td>5</td>\n",
-       "      <td>24.180677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-11-17 00:00:00+00:00</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.421590</td>\n",
-       "      <td>320.906128</td>\n",
-       "      <td>norrkoping</td>\n",
-       "      <td>27.845675</td>\n",
-       "      <td>tradgardsgatan-21</td>\n",
-       "      <td>sweden</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27.245382</td>\n",
+       "      <td>15.484754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -606,11 +557,17 @@
        "      <td>12.849528</td>\n",
        "      <td>281.309906</td>\n",
        "      <td>norrkoping</td>\n",
-       "      <td>24.149405</td>\n",
-       "      <td>tradgardsgatan-21</td>\n",
-       "      <td>sweden</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27.649843</td>\n",
+       "      <td>13.550346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-11-17 00:00:00+00:00</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.421590</td>\n",
+       "      <td>320.906128</td>\n",
+       "      <td>norrkoping</td>\n",
+       "      <td>17.969843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -620,11 +577,27 @@
        "      <td>7.968939</td>\n",
        "      <td>18.435053</td>\n",
        "      <td>norrkoping</td>\n",
-       "      <td>27.785971</td>\n",
-       "      <td>tradgardsgatan-21</td>\n",
-       "      <td>sweden</td>\n",
-       "      <td>4</td>\n",
-       "      <td>28.501793</td>\n",
+       "      <td>27.600151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-11-16 00:00:00+00:00</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.904882</td>\n",
+       "      <td>247.011261</td>\n",
+       "      <td>norrkoping</td>\n",
+       "      <td>26.378410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025-11-14 00:00:00+00:00</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.090103</td>\n",
+       "      <td>283.134033</td>\n",
+       "      <td>norrkoping</td>\n",
+       "      <td>28.257179</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -632,39 +605,23 @@
       ],
       "text/plain": [
        "                       date  temperature_2m_mean  precipitation_sum  \\\n",
-       "5 2025-11-14 00:00:00+00:00                 4.55                0.0   \n",
        "0 2025-11-15 00:00:00+00:00                 2.25                0.0   \n",
-       "4 2025-11-16 00:00:00+00:00                 4.95                0.0   \n",
-       "2 2025-11-17 00:00:00+00:00                 0.90                0.0   \n",
        "1 2025-11-18 00:00:00+00:00                 0.85                0.0   \n",
+       "2 2025-11-17 00:00:00+00:00                 0.90                0.0   \n",
        "3 2025-11-19 00:00:00+00:00                 1.70                0.0   \n",
+       "4 2025-11-16 00:00:00+00:00                 4.95                0.0   \n",
+       "5 2025-11-14 00:00:00+00:00                 4.55                0.0   \n",
        "\n",
-       "   wind_speed_10m_max  wind_direction_10m_dominant        city  \\\n",
-       "5           11.090103                   283.134033  norrkoping   \n",
-       "0           12.181625                   251.029495  norrkoping   \n",
-       "4           12.904882                   247.011261  norrkoping   \n",
-       "2            7.421590                   320.906128  norrkoping   \n",
-       "1           12.849528                   281.309906  norrkoping   \n",
-       "3            7.968939                    18.435053  norrkoping   \n",
-       "\n",
-       "   predicted_pm25             street country  days_before_forecast_day  \\\n",
-       "5       30.099804  tradgardsgatan-21  sweden                         6   \n",
-       "0       21.784365  tradgardsgatan-21  sweden                         1   \n",
-       "4       31.040571  tradgardsgatan-21  sweden                         5   \n",
-       "2       27.845675  tradgardsgatan-21  sweden                         3   \n",
-       "1       24.149405  tradgardsgatan-21  sweden                         2   \n",
-       "3       27.785971  tradgardsgatan-21  sweden                         4   \n",
-       "\n",
-       "   (predicted_pm25, pm25_lag1)  \n",
-       "5                    14.730573  \n",
-       "0                    20.412798  \n",
-       "4                    24.180677  \n",
-       "2                    27.245382  \n",
-       "1                    27.649843  \n",
-       "3                    28.501793  "
+       "   wind_speed_10m_max  wind_direction_10m_dominant        city  predicted_pm25  \n",
+       "0           12.181625                   251.029495  norrkoping       15.484754  \n",
+       "1           12.849528                   281.309906  norrkoping       13.550346  \n",
+       "2            7.421590                   320.906128  norrkoping       17.969843  \n",
+       "3            7.968939                    18.435053  norrkoping       27.600151  \n",
+       "4           12.904882                   247.011261  norrkoping       26.378410  \n",
+       "5           11.090103                   283.134033  norrkoping       28.257179  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,17 +669,47 @@
     "    X_df = pd.DataFrame([row])[feature_order]\n",
     "\n",
     "    # Predict\n",
-    "    y_pred = retrieved_xgboost_model.predict(X_df)[0]\n",
+    "    y_pred = np.float32(retrieved_xgboost_model.predict(X_df)[0])\n",
     "    preds.append(float(y_pred))\n",
     "\n",
     "    # Update lag list with new prediction\n",
     "    lags.append(float(y_pred))\n",
     "\n",
-    "# Attach predictions to forecast dataset\n",
-    "batch_data[\"predicted_pm25\"] = preds\n",
+    "batch_data[\"predicted_pm25\"] = pd.Series(preds, dtype=\"float32\")\n",
     "batch_data\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "95d78ba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6 entries, 0 to 5\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                       Non-Null Count  Dtype                  \n",
+      "---  ------                       --------------  -----                  \n",
+      " 0   date                         6 non-null      datetime64[us, Etc/UTC]\n",
+      " 1   temperature_2m_mean          6 non-null      float32                \n",
+      " 2   precipitation_sum            6 non-null      float32                \n",
+      " 3   wind_speed_10m_max           6 non-null      float32                \n",
+      " 4   wind_direction_10m_dominant  6 non-null      float32                \n",
+      " 5   city                         6 non-null      object                 \n",
+      " 6   predicted_pm25               6 non-null      float32                \n",
+      "dtypes: datetime64[us, Etc/UTC](1), float32(5), object(1)\n",
+      "memory usage: 344.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_data.info()"
    ]
   },
   {
@@ -853,37 +840,6 @@
     "#batch_data['predicted_pm25'] = retrieved_xgboost_model.predict(\n",
     "    #batch_data[['temperature_2m_mean', 'precipitation_sum', 'wind_speed_10m_max', 'wind_direction_10m_dominant']])\n",
     "#batch_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "95d78ba2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6 entries, 0 to 5\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column                       Non-Null Count  Dtype                  \n",
-      "---  ------                       --------------  -----                  \n",
-      " 0   date                         6 non-null      datetime64[us, Etc/UTC]\n",
-      " 1   temperature_2m_mean          6 non-null      float32                \n",
-      " 2   precipitation_sum            6 non-null      float32                \n",
-      " 3   wind_speed_10m_max           6 non-null      float32                \n",
-      " 4   wind_direction_10m_dominant  6 non-null      float32                \n",
-      " 5   city                         6 non-null      object                 \n",
-      " 6   predicted_pm25               6 non-null      float32                \n",
-      "dtypes: datetime64[us, Etc/UTC](1), float32(5), object(1)\n",
-      "memory usage: 344.0+ bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "batch_data.info()"
    ]
   },
   {
